2005-08-01  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/dsprintf.c:
	* nsd/dstring.c: Untabify, reformat and add CONST declarations.

	* nsd/log.c: Untabify, reformat and touch up comments.

2005-08-01  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h: fixed bug preventing sockcallbacks to
	be used, NS_SOCK_ANY should be 0xff otherwise callback is
	removed from the queue.

	* include/ns.h:
	* nsd/nsd.h:
	* nsd.queue.c:
	* nsd.return.c:
	* nsd/conn.c: added ns_conn responseversion to manually set response 
	protocol and version to have full control about returned HTTP format.
	For C API 2 functiosn are added: Ns_ConnResponseVersion and
	Ns_ConnSetResponseVersion. Added responseVersion char* pointer to 
	Conn structure. To enable response version tests ns_httptest needs
	to be changed to return response protocol/version.

	* nsd/adprequest.c:
	* tests/http_chunked.test:
	* tests/testserver/pages/http_chunked.adp: detects now whether client 
	is HTTP/1.1 and therefore handles chunked encoding. 

2005-07-30  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h: Untabify and reformat some definitions. Remove
	unused/unneeded NS_AOLSERVER_3_PLUS, NS_SHUTDOWN and
	NS_REGISTER_SERVER_TRACE.

2005-07-29  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h: 

	* nslog/nslog.c: Fix use of ex-compat macro Ns_ConfigGet.

	* include/nsthread.h:
	* nsthread/memory.c: Ensure callers of ns_realloc check the
	rerturn value.  Use ckalloc etc. macros consistently for
	debugging.

	* include/ns.h:
	* include/nsthread.h:
	* nsd/tclthread.c:
	* nsd/tclfile.c:
	* nsthread/Makefile:
	* nsthread/compat:
	* nscgi/nscgi.c: Remove a bunch of truly ancient compatibility
	macros and functions.

	* nsd/tclinit.c:
	* nsd/tclcmds.c:
	* nsd/init.tcl: Remove ns_markfordelete command and roll into
	ns_ictl as ns_ictl markfordelete.

	* nsd/nsd.h:
	* nsd/nsmain.c:
	* nsd/tclinit.c: Allocate interps efficiently, max 1 per-thread
	per-server. (RFE #1241351)
